fix: Definindo z-index header

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,7 @@
 .header-container {
   background: #ffffff;
   color: black;
+  z-index: 1000;
   position: fixed;
   width: 100%;
 }
